<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 Vast Gui
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">夏风天气</string>
    <string name="city">城市</string>
    <string name="data">数据</string>
    <string name="home">首页</string>
    <string name="humidity">湿度</string>
    <string name="visibility">能见度</string>
    <string name="weather">天气</string>
    <string name="weather_icon">天气图标</string>
    <string name="wind_speed">风速</string>
    <!--天气图标-->
    <string name="ic_cloudy_day">&#xe8bb;</string>
    <string name="ic_fog">&#xe8a8;</string>
    <string name="ic_humidity">&#xe79e;</string>
    <string name="ic_partly_cloudy">&#xe8b9;</string>
    <string name="ic_shower">&#xe8af;</string>
    <string name="ic_sunny_day">&#xe8bd;</string>
    <string name="ic_wind_speed">&#xe782;</string>
    <!-- 图标名称 -->
    <string name="ic_spin_list">旋转列表</string>
    <!-- DataFragment 页面 -->
    <string name="df_en_hans_weather">%s %s</string>
    <string name="df_feelslike_temperature">体感温度 %s℃</string>
    <string name="df_temperature">%s℃</string>
    <string name="df_visibility">%skm</string>
    <string name="df_wind_speed">%skm/h</string>
    <!-- HomeFragment页面-->
    <string name="hf_now_weather">当前天气实况</string>
    <string name="hf_weather_forecast_for_the_last_seven_days_hans">最近七天的天气预报</string>
    <string name="hf_weather_forecast_for_the_last_ten_days_en">Weather forecast for the last seven days</string>
    <!-- 当天天气 item_daily_weather -->
    <string name="idw_daily_high_temperature">%s℃</string>
    <string name="idw_daily_humidity">%s％</string>
    <string name="idw_daily_low_temperature">最低温度%s℃</string>
    <string name="idw_daily_wind_speed">%skm/h</string>
    <!-- 城市 item_city_information -->
    <string name="ici_administrative_attribution">%s/%s</string>
    <string name="ic_ici_city_nation">&#xe625;</string>
    <string name="ic_ici_city_id">&#xe726;</string>
    <string name="ic_ici_city_utc">&#xe640;</string>
    <string name="ic_ici_administrative_attribution">&#xe88a;</string>
    <string name="ic_ici_city_name">&#xe603;</string>
    <string name="ic_ici_city_area">&#xe608;</string>
    <!--字体文件路径-->
    <string name="ttf_icon_weather">fonts/iconWeather.ttf</string>
    <string name="ttf_icon_city">fonts/iconCity.ttf</string>
    <string name="free_subscription">免费订阅</string>
    <string name="standard_subscription">标准订阅</string>
</resources>